<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="36dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="36dp"
        android:text="@string/create_your_account"
        android:textColor="#000000"
        android:textColorLink="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/editTextRegE"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:text=""
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextRegUserName"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegE" />

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegUserName"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonRegSignUp"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up"
        android:textColor="#311B92"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonRegSignUp2"
        android:layout_width="318dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="36dp"
        android:text="@string/sign_up_2"
        android:textColor="#311B92"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegSignUp"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>